services/kirabot-db/deployment-php.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kirabot-phpmyadmin
  namespace: kirabot
  labels:
    app: kirabot-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kirabot-phpmyadmin
  template:
    metadata:
      labels:
        app: kirabot-phpmyadmin
    spec:
      containers:
        - name: scp-bot-proxy
          image: phpmyadmin:5-apache
          ports:
            - containerPort: 80
              name: http
