services/kirabot-db/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kirabot-phpmyadmin-svc
  namespace: kirabot
spec:
  selector:
    app: kirabot-phpmyadmin
  ports:
    - port: 80
      name: http
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: kirabot-db-svc
  namespace: kirabot
spec:
  selector:
    app: kirabot-db
  ports:
    - port: 3306
      name: sql
      targetPort: sql
